# tests

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test_wf.yml  ci.yaml  manual_tests.yml  oz.yml  reusable_wf_build.yml  reusable_wf_collect_logs.yml  reusable_wf_tests.yml  run_tests.yml
ci/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.runtime  Dockerfile_allure  Dockerfile_oz  Dockerfile_solc  client-config.yaml  cross-rollup-config.json  docker-compose.yml  init-multiple-dbs.sql  rollup-tx-payer.json  rome-config.json  start_tests.sh  uniswap_local.sh
ci/cfg/: client-config-fee-free.yaml  client-config.yaml  devnet-config-fee-free.yaml  devnet-config.yaml  hercules-config.yml  proxy-config-free.yml  proxy-config-oz.yml  proxy-config.yml  proxy-config1.yml  proxy-config2.yml  relayer-config.yml  rhea-config-free.yml  rhea-config-oz.yml  rhea-config.yml  testnet-config-fee-free.yaml  testnet-config.yaml
ci/keys/: empty-keypair.json  id1.json  id10.json  id11.json  id12.json  id13.json  id14.json  id15.json  id16.json  id17.json  id18.json  id19.json  id2.json  id20.json  id21.json  id22.json  (+22 more)
evm/: Cargo.toml
evm/tests/: cli.rs  cross-rollup.rs  evm.rs  spl.rs  state_comparison.rs  state_comparison_2.rs
evm/tests/shared/: client.rs  config.rs  cross_rollup_fn.rs  fixture.rs  mod.rs  tx.rs  utils.rs
local-env/: 1_start_solana_and_deploy_evm.sh  2a_run_proxy.sh  2b_run_rhea.sh  docker-compose.yml  proxy-config1.yml  proxy-config2.yml  proxy-sender.json  rhea-config.yml  rome-keypair2.json
oz/: Cargo.toml
scripts/: all.sh  cross_rollup.sh  evm.sh  generate_ctrf.sh  open_zeppelin_op_geth.sh  open_zeppelin_proxy.sh  uniswap_op_geth.sh  uniswap_proxy.sh
solidity/: ab_deploy.sol  atomic_iterative.sol  cu.sol  get_storage_at.sol  hello_world.sol  iterative_op_geth.sol  multi_storage.sol  nested_call.sol  revert.sol  selfdestruct.sol  storage.sol  storage_caller.sol  storage_standard.sol  touch_storage.sol  transient_storage.sol  tstore.sol  update_storage.sol  withdraw.sol
(+42 files in other folders)
