[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
anyhow = "1.0.86"
ethers = "2.0.14"
rome-evm-client = {path = "../../rome-sdk/rome-evm-client/"}
rome-sdk = {path = "../../rome-sdk/rome-sdk/"}
solana-program = "1.18.17"
serde = { version = "1.0", features = ["derive", "rc"] }
solana-client = "1.18.17"
solana-sdk = "1.18.17"
tracing = "0.1.40"
libsecp256k1 = { version = "0.5.0", default-features = false, features = ["static-context", "hmac"] }
primitive-types = "0.11.1"
rand_core = "0.6.4"
ethereum_abi = "0.4.0"
serde_json = "1.0.116"
rlp = "=0.5.2"
rstest = "0.22.0"
ethereum-types = "0.14.1"
serde_yaml = "0.9.33"
ethers-core = "2.0.14"
ethers-signers = "2.0.14"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = "1.39.2"
tokio-util = "0.7.10"
hex = "0.4.3"
evm = { git = "https://github.com/rome-protocol/evm.git", branch = "master" }
emulator = {path = "../../rome-evm-private/emulator"}
openssl = { version = "0.10.59", features = ["vendored"] }
