[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
solana-program = "=2.1.7"
solana-client = "=2.1.7"
solana-sdk = "=2.1.7"
anyhow = "1.0.86"
ethers = "2.0.14"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
tracing = "0.1.40"
libsecp256k1 = { version = "0.5.0", default-features = false, features = ["static-context", "hmac"] }
primitive-types = "0.11.1"
rand_core = "0.6.4"
ethereum_abi = "0.4.0"
serde_json = "1.0.116"
rlp = "=0.5.2"
rstest = "0.22.0"
ethereum-types = "0.14.1"
serde_yaml = "0.9.33"
ethers-core = "2.0.14"
ethers-signers = "2.0.14"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = "1.39.2"
tokio-util = "0.7.10"
hex = "0.4.3"
openssl = { version = "0.10.59", features = ["vendored"] }
url = "2.5.2"
serial_test = "3.1.1"
rome-sdk = { path = "../../rome-sdk/rome-sdk" }
